complete lab4